--- a/pemFioi/quizze/quizzeStyles-0.1.css
+++ b/pemFioi/quizze/quizzeStyles-0.1.css
@@ -1,24 +1,12 @@
-@font-face {
-  font-family: 'Titillium Web';
-  src: url('../../fonts/titilliumweb-light.woff2') format('woff2'),
-       url('../../fonts/titilliumweb-light.woff') format('woff'),
-       url('../../fonts/titilliumweb-light.ttf') format('truetype');
-  font-weight: 100;
-}
-@font-face {
-  font-family: 'Titillium Web';
-  src: url('../../fonts/titilliumweb-regular.woff2') format('woff2'),
-       url('../../fonts/titilliumweb-regular.woff') format('woff'),
-       url('../../fonts/titilliumweb-regular.ttf') format('truetype');
-  font-weight: normal;
-}
-@font-face {
-  font-family: 'Titillium Web';
-  src: url('../../fonts/titilliumweb-bold.woff2') format('woff2'),
-       url('../../fonts/titilliumweb-bold.woff') format('woff'),
-       url('../../fonts/titilliumweb-bold.ttf') format('truetype');
-  font-weight: bold;
-}
+@import url('../../fonts/titilliumweb.css');
+@import url('../../fonts/fontAwesome/css/all.css');
+
+/*
+*
+* LAYOUT
+*
+*/
+
 #task {
   position: relative;
   overflow-x: hidden;
@@ -27,8 +15,10 @@
   padding-top: 2em;
   counter-reset: questions-counter;
 }
+#task * {
+  box-sizing: border-box;
+}
 #task .intro,
-#task question,
 #displayHelperAnswering {
   padding: 20px 60px;
 }
@@ -40,26 +30,31 @@
   padding-top: 5px;
   float: left;
 }
-#task .intro .introTitle {
+#task .title {
   font-size: 22px;
   font-weight: 100;
   color: #4a90e2;
   margin: 1em 0 0.5em;
 }
-#task question {
+
+question {
   display: block;
+  padding: 20px 0;
 }
-#task question:nth-child(odd) {
+question > * {
+  padding: 0 60px;
+}
+question:nth-child(odd) {
   background: rgba(74,144,226,0.2);
 }
-#task statement {
+statement {
   color: #4a90e2;
   font-size: 22px;
   margin-bottom: 20px;
   font-weight: bold;
   display: block;
 }
-#task statement::before {
+statement::before {
   counter-increment: questions-counter;
   content: counter(questions-counter);
   color: #fff;
@@ -75,23 +70,207 @@
 }
 
 
+/*
+*
+* QUESTION DEFAULT LAYOUT: TYPE SINGLE ANSWERS
+*
+*/
+
 answer {
   display: block;
+  border-top: 1px solid;
+  border-color: #e1e1e1;
+  padding: 5px 0;
+}
+question:nth-child(odd) answer {
+  border-color: #d2d2d2;
+}
+answer:first-child {
+  border-top: none;
+}
+answer .answer-block {
+  display: flex;
+  margin-left: -15px;
+  padding-left: 15px;
+  border: 1px solid transparent;
+  border-radius: 20px;
+  transition: all linear 50ms;
+}
+answer.selected .answer-block {
+  color: #4a90e2;
+  border-color: #4a90e2;
+}
+answer .answer-label {
+  flex: 1 0 auto;
+  line-height: 1.5em;
+  transition: all linear 50ms;
+}
+answer.selected .answer-label {
+  font-weight: bold;
+}
+answer .answer-code {
+  border: 1px solid #4a90e2;
+  border-radius: 20px;
+  text-align: center;
+  position: relative;
+  color: #4a90e2;
+  font-weight: bold;
+  cursor: pointer;
+  flex: 0 1 120px;
+  align-self: center;
+  transition: all linear 50ms;
+}
+answer.selected .answer-code {
+  color: #fff;
+  background-color: #4a90e2;
+}
+answer.selected .answer-code::before {
+  content: "\f00c";
+  font-family: "FontAwesome";
+  font-weight: 900;
+  position: absolute;
+  left: 15px;
+  top: 7px;
+  top: calc(50% - 0.5em);
+}
+/*
+*
+* QUESTION HORIZONTAL LAYOUT: TYPE SINGLE ANSWERS
+*
+*/
+question.horizontal .answers {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 -20px;
+}
+question.horizontal answer {
+  border-top: none;
+  flex: 1 0 0;
+  padding: 0 20px;
+  border-left: 1px solid;
+}
+question.horizontal answer:first-child {
+  border-left: none;
+}
+question.horizontal answer .answer-block {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin-left: 0;
+  padding-left: 0;
+}
+question.horizontal answer .answer-label,
+question.horizontal answer .answer-code {
+}
+question.horizontal answer .answer-label {
+  text-align: center;
+  padding: 1em 10px;
+}
+question.horizontal answer .answer-code {
+  flex: 0 0 0;
+  align-self: stretch;
+  margin: 0 -1px -1px;
+  padding: 2px 10px;
 }
 
-answer.selected {
-  background: #AABBFF;
+/* Switch checkbox */
+.answer-switch {
+  display: inline-block;
+  background: rgba(0,0,0,0.05);
+  border-radius: 20px;
+  box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.05);
+  height: 26px;
+  width: 100px;
+  position: relative;
+  right: 0;
+  cursor: pointer;
+  box-shadow: 0 1px 0 0 #727273 inset;
+}
+.answer-switch::before,
+.answer-switch::after {
+  font-family: "FontAwesome";
+  font-weight: 900;
+  position: absolute;
+  top: 7px;
+  top: calc(50% - 0.5em);
+  color: #9B9B9B;
+}
+.answer-switch::before {
+  content: "\f00d";
+  right: auto;
+  left: 20px;
+}
+.answer-switch::after {
+  content: "\f00c";
+  right: 20px;
+  left: auto;
+}
+.answer-switch .cursor {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 26px;
+  width: 55px;
+  border-radius: 20px;
+  background-color: #9B9B9B;
+  transition: all 250ms;
+  z-index: 1;
+}
+answer.selected .answer-switch .cursor {
+  background-color: #4a90e2;
+  left: 45px;
+}
+.answer-switch .cursor::before {
+  content: "\f00d";
+  font-family: "FontAwesome";
+  font-weight: 900;
+  position: absolute;
+  top: 7px;
+  top: calc(50% - 0.5em);
+  left: 20px;
+  color: #fff;
+}
+answer.selected .answer-switch .cursor::before {
+  content: "\f00c";
+  right: auto;
+  left: 20px;
+}
+
+question.horizontal .answer-switch {
+  align-self: center;
 }
 
 answer .error {
 }
 
 answer .error-message {
-  color: #993333;
+  color: #ff001f;
+  background-color: #ffe5e8;
+  margin-top: 10px;
+  border-radius: 50px 0 0 50px;
+  padding: 7px 8px 7px 40px;
+  position: relative;
+  font-size: 14px;
+}
+answer .error-message .icon {
+  color: #fff;
+  background-color: #ff001f;
+  padding: 5px 6px;
+  border-radius: 50%;
+  font-size: 12px;
+  position: absolute;
+  left: 8px;
+  top: calc(50% - 0.5em - 5px);
+
 }
 
 solution {
   display: block;
+  border-top: 1px solid #e1e1e1;
+  margin-top: 30px;
+}
+question:nth-child(odd) solution {
+  border-color: #d2d2d2;
 }
 
 answer-group {
@@ -100,8 +279,8 @@ answer-group {
 
 input[type=text] {
   font-size: 12px;
-  background: #F8F8F8;
-  border: 1px solid #E1E1E1;
+  background: #f8f8f8;
+  border: 1px solid #e1e1e1;
   border-radius: 5px;
   padding: 6px 12px;
   width: 100%;
@@ -116,9 +295,11 @@ input[type=text]:focus {
   font-style: italic;
   opacity: 0.7;
 }
+
+
 #displayHelper_saved {
-  border-top: 1px solid #E1E1E1;
-  border-bottom: 1px solid #E1E1E1;
+  border-top: 1px solid #e1e1e1;
+  border-bottom: 1px solid #e1e1e1;
   padding: 10px 0;
   font-size: 1rem;
 }
@@ -126,7 +307,6 @@ input[type=text]:focus {
 #displayHelper_cancel {
   display: inline-block;
   width: 50%;
-  box-sizing: border-box;
 }
 #displayHelper_validate {
   padding-right: 20px;
@@ -134,22 +314,84 @@ input[type=text]:focus {
 #displayHelper_cancel {
   padding-left: 20px;
 }
-#displayHelper_validate input,
-#displayHelper_cancel input {
+input[type=button],
+button,
+.btn {
   border-radius: 50px;
   color: #fff;
   border: none;
   text-transform: uppercase;
   font-weight: bold;
-  margin: 0;
   font-size: 12px;
   letter-spacing: 0.1em;
-  width: 100%;
   padding: 7px 20px;
 }
-#displayHelper_validate input {
+#displayHelper_validate input[type=button],
+#displayHelper_cancel input[type=button] {
+  margin: 0;
+  width: 100%;
+}
+#displayHelper_validate input[type=button] {
   background-color: #4a90e2;
 }
-#displayHelper_cancel input {
+#displayHelper_cancel input[type=button],
+#showSolutionButton .btn {
   background-color: #9b9b9b;
+}
+.btn:hover {
+  color: #fff;
+}
+
+#popupMessage.floatingMessage {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: gray;
+  background: rgba(241, 242, 247, .9);
+}
+#popupMessage.floatingMessage .container {
+  min-height: 100px;
+  width: 94%;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  color:#787878;
+  background: #fff;
+  border: none;
+  border-radius: 5px;
+  top: 50%;
+  transform: translate(0,-50%);
+}
+#popupMessage.floatingMessage .container img {
+  display: none;
+}
+#popupMessage .message {
+  font-size: 1em;
+  margin: 60px;
+  border: 0;
+  font-weight: normal;
+  padding: 0;
+}
+#popupMessage p {
+  margin: .5em 0 0;
+}
+#popupMessage p:first-child {
+  margin-top: 0;
+}
+#popupMessage .buttonsWrapper {
+  margin: 2em auto 0;
+  text-align: center;
+}
+#popupMessage button {
+  margin: 0 auto;
+  background-color: #4a90e2;
+}
+#popupMessage button.buttonYes::before {
+  content: "\f00c";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  margin-right: 10px;
 }
