quickPi connexion enable item list selection when school selected

--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -47,8 +47,8 @@ body > * {
 .interfaceToggled {
   display: none !important;
 }
-.btn:disabled {
-  background-color: #ccc !important;
+:disabled {
+  background-color: #eee !important;
   cursor: not-allowed !important;
 }
 /*****************
