--- a/pemFioi/taskStyles-mobileFirst.css
+++ b/pemFioi/taskStyles-mobileFirst.css
@@ -23,7 +23,6 @@ img {
   margin-top: 0 !important;
 }
 
-
 /*****************
   LEVEL SELECTOR
 *****************/
@@ -205,7 +204,7 @@ img {
 #popupMessage.floatingMessage .container {
    min-height: 100px;
    width: 94%;
-   max-width: 1000px;
+   max-width: 680px;
    margin-left: auto;
    margin-right: auto;
    border-radius: 5px;
@@ -279,48 +278,60 @@ img {
   font-size: 12px;
 }
 #popupMessage .connectPi .panel-body {
-  margin-left: 30px;
+  margin-left: 44px; /* Align left to .sectionTitle text left */
   font-size: 12px;
 }
 #popupMessage .connectPi .panel-body label {
   display: block;
   margin-top: 2em;
 }
-#popupMessage .connectPi input,
+
+#popupMessage .connectPi .form-control,
 #popupMessage .connectPi select {
-  background-color: #f8f8f8;
+  background-color: transparent;
   border: none;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   font-size: 16px;
   height: 36px;
   line-height: 1.6;
   color: #555555;
   border-radius: 5px; 
 }
-#popupMessage .connectPi input {
-  width: 100%;
-  margin: 10px 0 0;
-  display: block;
+#popupMessage .connectPi .form-control {
+  flex-grow: 1;
+  margin: 0;
   padding: 6px 12px;
+}
+#popupMessage .connectPi input {
+  margin-left: 0;
 }
 #popupMessage .connectPi select {
   padding: 6px 12px;
 }
 #popupMessage .connectPi .input-group {
   position: relative;
+  width: 100%;
+  margin: 10px 0 0;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   -ms-flex-align: stretch;
   align-items: stretch;
-  width: 100%;
-  margin: 10px 0 0;
+  background-color: #f8f8f8;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
-#popupMessage .connectPi .input-group button {
+#popupMessage .connectPi .input-group .input-group-prepend {
   border-radius: 5px 0 0 5px;
-  padding: 6px 12px;
   line-height: 2.4rem;
+  padding: 6px 12px;
+  border: none;
+  color: #c5c4c4;
+  padding: 6px 9px;
+  font-weight: bold;
+}
+#popupMessage .connectPi .input-group button.input-group-prepend {
+  color: #fff;
 }
 #popupMessage .connectPi .input-group .custom-select {
   position: relative;
@@ -340,7 +351,6 @@ img {
   border: none;
   font-size: 1.2rem;
   position: relative;
-  display: block;
 }
 #popupMessage .connectPi .btn .icon {
   position: absolute;
@@ -348,7 +358,43 @@ img {
   top: 7px;
   top: calc(50% - 0.5em);
 }
-
+#popupMessage .connectPi .btn-group.switchRadio {
+  display: flex;
+  background-color: #e5e5e5;
+  border-radius: 50px;
+  margin: 2em 0;
+  box-shadow: 1px 1px 0 0 #ccc inset;
+}
+#popupMessage .connectPi .btn-group.switchRadio .btn {
+  flex: 1 1 auto;
+  margin: 0;
+  border-left: 1px solid #d3d3d3;
+  transition: all ease 250ms;
+}
+#popupMessage .connectPi .btn-group.switchRadio .btn:not(.active) {
+  background-color: transparent;
+  border-radius: 0;
+  color: #bbbbbb;
+}
+#popupMessage .connectPi .btn-group.switchRadio .btn:first-child,
+#popupMessage .connectPi .btn-group.switchRadio .btn.active + .btn {
+  border-left: 0;
+}
+#popupMessage .connectPi .btn-group.switchRadio .btn .icon {
+  position: static;
+  padding-right: 10px;
+}
+.inlineButtons {
+  text-align: center;
+  margin: 2em 0;
+  display: flex;
+}
+.inlineButtons button {
+  flex: 1 0 0;
+}
+#popupMessage .connectPi .inlineButtons button + button {
+  margin-left: 10px;
+}
 .pythonIntroSimple code, .pythonIntroFull code {
   cursor: pointer;
   color: #4D87CE;
