quickPi: style usb/bt connexion status message + move conceptViewer style to own file

--- a/pemFioi/conceptViewer-1.0-mobileFirst.css
+++ b/pemFioi/conceptViewer-1.0-mobileFirst.css
@@ -27,6 +27,9 @@
     padding: 15px;
     border-bottom: 1px solid rgba(0,0,0,0.1);
 }
+#conceptViewer .exit {
+  cursor: pointer;
+}
 #conceptViewer .exit .icon {
     font-size: 18px;
     color: #4a90e2;
