--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -696,6 +696,9 @@ p {
   font-size: 12px;
   line-height: 16px;
 }
+#testSelector .tabs .testTab .testThumbnail {
+  width: 80%;
+}
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024.9px) and (orientation: portrait),
   screen and (min-width: 855px) and (orientation: landscape),
