--- a/pemFioi/taskStyles-0.1_M.css
+++ b/pemFioi/taskStyles-0.1_M.css
@@ -297,6 +297,12 @@ h1 .stars {
    border-radius: 8px;
    text-align: justify;
 }
+#popupMessage.noAvatar img.beaver, #popupMessage.noAvatar.messageArrow {
+   display: none;
+}
+#popupMessage.noAvatar .message {
+   margin-left: 0px;
+}
 #popupMessage p {
    margin: .5em 0 0;
 }
